2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line-1): Fix indentation.

	* term/ns-win.el (up-one, down-one, left-one, right-one): Remove,
	checked in inadvertently.

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* term/ns-win.el: Standardize references to "Nextstep" in
	comments, messages, and docstrings.
	(ns-handle-args, x-parse-geometry)
	(ns-extended-platform-support-mode, x-setup-function-keys)
	(ns-select-overlay, ns-unselect-line, ns-yes-or-no-p)
	(ns-set-pasteboard, ns-scroll-bar-move, ns-defined-colors)
	(ns-initialized, ns-initialize-window-system): Doc fixes.

2008-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* diff-mode.el (diff-auto-refine): Delete defcustom.
	(diff-auto-refine-mode): New func/var via define-minor-mode.
	Update var ref to use diff-auto-refine-mode.
	* smerge-mode.el (diff-mode): Require when compiling.
	(smerge-auto-refine): Delete defcustom.
	Update smerge-auto-refine ref to use diff-auto-refine-mode.

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (visual-line): New custom group.
	(visual-line-fringe-indicators): New var.
	(visual-line-mode): Set fringe-indicator-alist based on
	visual-line-fringe-indicators.  Add lighter.

2008-07-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/x-win.el (x-handle-switch, x-handle-numeric-switch)
	(x-handle-initial-switch, x-handle-iconic, x-handle-xrm-switch)
	(x-handle-geometry, x-handle-name-switch, x-display-name)
	(x-handle-display, x-handle-args, x-colors): Move ...
	* term/common-win.el: ... here.  New file.
	* term/w32-win.el (x-handle-switch, x-handle-numeric-switch)
	(x-handle-initial-switch, x-handle-iconic, x-handle-xrm-switch)
	(x-handle-geometry, x-handle-name-switch, x-display-name)
	(x-handle-display, x-handle-args, x-colors): Remove.
	* loadup.el: Load term/common-win before term/x-win and term/w32-win.

2008-07-19  Juri Linkov  <juri@jurta.org>

	* startup.el (fancy-startup-text): Move the line "To quit